--- a/README
+++ b/README
@@ -1,1 +1,11 @@
-A simple but useful debug logging module.
+A simple yet useful debug logging module that automatically prints the context of the log message.
+
+Installation
+============
+
+$easy_install nbdebug
+
+Testing
+=======
+
+NBDEBUG="" python2 tests/test.py
